--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,131 @@
+argon2-cffi==21.1.0
+attrs==21.2.0
+backcall==0.2.0
+backports.entry-points-selectable==1.1.0
+beautifulsoup4==4.9.3
+bleach==4.1.0
+bs4==0.0.1
+cachetools==4.2.4
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+citipy==0.0.5
+click==8.0.1
+colorama==0.4.4
+configparser==5.0.2
+Counter==1.0.0
+crayons==0.4.0
+cycler==0.10.0
+debugpy==1.4.1
+decorator==5.0.9
+defusedxml==0.7.1
+distlib==0.3.3
+ds==0.0.1
+EasyProcess==0.3
+entrypoints==0.3
+filelock==3.0.12
 Flask==2.0.1
-gunicorn==19.9.0
-matplotlib==3.1.3
-seaborn==0.10.0
-pandas==1.0.1
-numpy==1.18.1
-scikit_learn==0.23.2
+Flask-PyMongo==2.3.0
 Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.25
+google-auth==2.3.3
+greenlet==1.1.1
+idna==3.2
+inspector==0.5.1.1
+ipykernel==6.3.1
+ipython==7.27.0
+ipython-genutils==0.2.0
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.1.0
+jsonify==0.5
+jsonschema==3.2.0
+jupyter-client==7.0.2
+jupyter-contrib-core==0.3.3
+jupyter-contrib-nbextensions==0.5.1
+jupyter-core==4.7.1
+jupyter-highlight-selected-word==0.2.0
+jupyter-latex-envs==1.4.6
+jupyter-nbextensions-configurator==0.4.1
+jupyterlab-pygments==0.1.2
+kdtree==0.16
+kiwisolver==1.3.1
+lxml==4.6.3
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+mrjob==0.7.4
+nbclient==0.5.4
+nbconvert==6.1.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.3
+numpy==1.21.1
+oauthlib==3.1.1
+packaging==21.0
+pandas==1.3.2
+pandocfilters==1.4.3
+parso==0.8.2
+pickleshare==0.7.5
+Pillow==8.3.1
+platformdirs==2.4.0
+plotly==5.1.0
+postgres==3.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+protobuf==3.19.1
+psycopg2==2.9.1
+psycopg2-binary==2.9.1
+psycopg2-pool==1.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.10.0
+pymongo==3.12.0
+PyMySQL==1.0.2
+pyparsing==2.4.7
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.1
+PyVirtualDisplay==0.2.4
+pywin32==301
+pywinpty==1.1.4
+PyYAML==5.4.1
+pyzmq==22.2.1
+redshift-sqlalchemy==0.2
+requests==2.26.0
+requests-file==1.5.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-learn==1.0.1
+scipy==1.7.1
+seaborn==0.11.2
+selenium==3.141.0
+Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0
+soupsieve==2.2.1
+splinter==0.15.0
+SQLAlchemy==1.4.23
+sqlparse==0.4.1
+tenacity==8.0.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+terminado==0.11.1
+testpath==0.5.0
+text-unidecode==1.3
+threadpoolctl==3.0.0
+tldextract==3.1.2
+tornado==6.1
+traitlets==5.1.0
+urllib3==1.26.6
+virtualenv==20.8.1
+wcwidth==0.2.5
+webdriver-manager==3.4.2
+webencodings==0.5.1
+Werkzeug==2.0.1
+wordcloud==1.8.1
+zope.event==4.5.0
+zope.interface==5.4.0
