--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
+django
+gunicorn
+django-heroku
+numpy
+flask
+pandas
+numpy
+matplotlib
+sklearn
 argon2-cffi==21.1.0
 attrs==21.2.0
 backcall==0.2.0
