--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,22 @@
-click
 django
 gunicorn
 django-heroku
-numpy
-flask
-pandas
-numpy
 matplotlib
-sklearn
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==1.0.0
+MarkupSafe==1.1.1
+numpy==1.19.5
+pandas==1.0.0
+python-dateutil==2.8.1
+pytz==2020.5
 scikit-learn==0.24.0
-warnings
-seaborn
-itertools
-psycopg2
-sqlalchemy
-joblib
-threadpoolctl
-python-dateutil
-scipy
-six
-MarkupSafe
-joblib
-Jinja2
-
+scipy==1.2.0
+six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
+Werkzeug==1.0.1
+gunicorn==19.9.0
 
