--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
 django
 django-heroku
-matplotlib
-click==7.1.2
-Flask==1.1.2
+importlib-metadata==4.8.2
+click==8.0.3
+Flask==2.0.2
+greenlet==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==1.0.0
-MarkupSafe==1.1.1
+itsdangerous==2.0.1
 numpy==1.19.5
-pandas==1.0.0
 python-dateutil==2.8.1
 pytz==2020.5
 scikit-learn==0.24.0
-scipy==1.2.0
+scipy==1.5.4
 six==1.15.0
 sklearn==0.0
-threadpoolctl==2.1.0
-Werkzeug==1.0.1
-gunicorn==19.9.0
-
+threadpoolctl==3.0.0
+gunicorn==20.1.0
+Pandas>0.17.1
+setuptools<=39.1.0
+pymysql<0.9.2
+sklearn<0.20.0
+SQLAlchemy==1.4.27
