--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ greenlet==1.1.2
 itsdangerous==2.0.1
 Jinja2==2.11.2
 joblib==1.0.0
-numpy==1.19.5
+numpy
 python-dateutil==2.8.1
 pytz==2020.5
 scikit-learn==0.24.0
