--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 django
 django-heroku
-importlib-metadata==4.8.2
-click==8.0.3
-Flask==2.0.2
-greenlet==1.1.2
-itsdangerous==2.0.1
-Jinja2==2.11.2
-joblib==1.0.0
+importlib-metadata
+click
+Flask
+greenlet
+itsdangerous
+Jinja2
+joblib
 numpy
-python-dateutil==2.8.1
-pytz==2020.5
-scikit-learn==0.24.0
-six==1.15.0
-sklearn==0.0
-threadpoolctl==3.0.0
-gunicorn==20.1.0
-Pandas>0.17.1
-setuptools<=39.1.0
-pymysql<0.9.2
-sklearn<0.20.0
-SQLAlchemy==1.4.27
+python-dateutil
+pytz
+scikit-learn
+six
+sklearn
+threadpoolctl
+gunicorn
+Pandas
+setuptools
+pymysql
+sklearn
+SQLAlchemy
