--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 django
-gunicorn
 django-heroku
-numpy
-flask
-pandas
-numpy
-matplotlib
-sklearn
-imblearn
-warnings
-seaborn
-itertools
-psycopg2
-sqlalchemy
+importlib-metadata
+click
+Flask
+greenlet
+itsdangerous
+Jinja2
 joblib
-Flask-SQLAlchemy==2.5.1
+numpy
+python-dateutil
+pytz
+scikit-learn
+six
+sklearn
+threadpoolctl
+gunicorn
+Pandas
+setuptools
+pymysql
+sklearn
+SQLAlchemy
+
