--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-django
-django-heroku
-importlib-metadata
-click
-Flask
-greenlet
-itsdangerous
-Jinja2
-joblib
 numpy
-python-dateutil
-pytz
-scikit-learn
-six
-sklearn
-threadpoolctl
+flask
+joblib
+pandas
+numpy
 gunicorn
-Pandas
-setuptools
-pymysql
 sklearn
-SQLAlchemy
